[tool.poetry]
name = "fastnasa"
version = "0.1.0"
description = ""
authors = ["Ifanj <ifan.johnston@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.1"
pandas = "^1.3.0"
fastapi = "^0.67.0"
httpx = "^0.18.2"
black = "^21.7b0"
uvicorn = "^0.14.0"
Jinja2 = "^3.0.1"
aiofiles = "^0.7.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
